// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentPrinter Tests 001: Renders a single empty segment with no lines or segments to follow 1`] = `
<DocumentFragment>
  <span
    class="sc-gnOvAp bYEiAR"
    id="segment0"
  >
    <span
      class="sc-glJfXD hHREYb"
    />
    <div
      class="sc-VHjGu hmIWSt"
      id="segment0-cursor"
    >
       
    </div>
  </span>
</DocumentFragment>
`;

exports[`SegmentPrinter Tests 002: Renders a single empty segment with more segments to follow 1`] = `
<DocumentFragment>
  <span
    class="sc-gnOvAp bYEiAR"
    id="segment0"
  >
    <span
      class="sc-glJfXD hHREYb"
    />
    <div
      class="sc-VHjGu jiiWGa"
      id="segment0-cursor"
    >
       
    </div>
  </span>
</DocumentFragment>
`;

exports[`SegmentPrinter Tests 003: Renders a SegmentPrinter with a single character of text and it is the last segment and last line 1`] = `
<DocumentFragment>
  <span
    class="sc-gnOvAp bYEiAR"
    id="segment0"
  >
    <span
      class="sc-glJfXD hHREYb"
    />
    <div
      class="sc-VHjGu jiiWGa"
      id="segment0-cursor"
    >
       
    </div>
  </span>
</DocumentFragment>
`;

exports[`SegmentPrinter Tests 004: Renders a SegmentPrinter with a single character of text but there are more segments to print 1`] = `
<DocumentFragment>
  <span
    class="sc-gnOvAp bYEiAR"
    id="segment004"
  >
    <span
      class="sc-glJfXD hHREYb"
    />
    <div
      class="sc-VHjGu jiiWGa"
      id="segment004-cursor"
    >
       
    </div>
  </span>
</DocumentFragment>
`;

exports[`SegmentPrinter Tests 005: Renders a SegmentPrinter with a long string of text but there are more segments to print 1`] = `
<DocumentFragment>
  <span
    class="sc-gnOvAp bYEiAR"
    id="segment005"
  >
    <span
      class="sc-glJfXD hHREYb"
    />
    <div
      class="sc-VHjGu jiiWGa"
      id="segment005-cursor"
    >
       
    </div>
  </span>
</DocumentFragment>
`;

exports[`SegmentPrinter Tests 006: Renders a SegmentPrinter with a large string of text instantly with instantPrint set to true 1`] = `
<DocumentFragment>
  <span
    class="sc-gnOvAp bYEiAR"
    id="segment0"
  >
    <span
      class="sc-glJfXD hHREYb"
    />
    <div
      class="sc-VHjGu jiiWGa"
      id="segment0-cursor"
    >
       
    </div>
  </span>
</DocumentFragment>
`;
